<resources>
    <string name="app_name">주어스</string>

    <string name="drawer_open">열기</string>
    <string name="drawer_close">닫기</string>


    //지도용(조건희)
    <string name="launch_activity">앱으로 이동</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">줍깅 멈추기</string>
    <string name="location_updated">오늘도 줍깅</string>

    //은빈 fragment
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_point">PointActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="shop1">의류 업사이클 매장</string>
    <string name="shop2">플라스틱 업사이클 매장</string>
    <string name="shop3">유리 업사이클 매장</string>

    <string name="use1">카페</string>
    <string name="use2">문화상품권</string>
    <string name="use3">환경용품</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_shopdetail">ShopdetailActivity</string>
</resources>