<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main"
    tools:context=".point.PointViewFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:paddingLeft="30dp"
                    android:paddingTop="30dp"
                    android:text="주어스 저금통"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/pigButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:elevation="10dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:src="@drawable/ic_piggy" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/view_text_bg"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:padding="5dp"
                        android:text="이번달은 "
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="3 명"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-medium"
                        android:padding="5dp"
                        android:text="의 주어서들이 기부했어요"
                        android:textColor="@color/white" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/main"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:paddingLeft="30dp"
                    android:paddingTop="30dp"
                    android:text="주변 업사이클 매장"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/main">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:padding="10dp">

                            <androidx.cardview.widget.CardView
                                android:layout_width="150dp"
                                android:layout_height="match_parent"
                                app:cardCornerRadius="20dp"
                                android:layout_margin="10dp"
                                android:elevation="5dp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <ImageButton
                                    android:id="@+id/clothShop"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:alpha=".50"
                                    android:background="@drawable/point_shop1"
                                    android:scaleType="centerCrop" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="bottom"
                                    android:clickable="false"
                                    android:text="@string/shop1"
                                    android:fontFamily="sans-serif-black"
                                    android:padding="5dp"/>

                            </androidx.cardview.widget.CardView>


                            <androidx.cardview.widget.CardView
                                android:layout_width="150dp"
                                android:layout_height="match_parent"
                                app:cardCornerRadius="20dp"
                                android:elevation="5dp"
                                android:layout_margin="10dp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <ImageButton
                                    android:id="@+id/plasticShop"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:alpha=".50"
                                    android:background="@drawable/point_shop2"
                                    android:scaleType="centerCrop" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="bottom"
                                    android:clickable="false"
                                    android:fontFamily="sans-serif-black"
                                    android:padding="5dp"
                                    android:text="@string/shop2" />

                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="150dp"
                                android:layout_height="match_parent"
                                app:cardCornerRadius="20dp"
                                android:elevation="5dp"
                                android:layout_margin="10dp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <ImageButton
                                    android:id="@+id/glassShop"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:alpha=".50"
                                    android:background="@drawable/point_shop3"
                                    android:scaleType="centerCrop" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="bottom"
                                    android:clickable="false"
                                    android:text="@string/shop3"
                                    android:fontFamily="sans-serif-black"
                                    android:padding="5dp"/>

                            </androidx.cardview.widget.CardView>


                        </LinearLayout>

                    </FrameLayout>

                </HorizontalScrollView>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/main"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:paddingLeft="30dp"
                    android:paddingTop="30dp"
                    android:text="주어스 상점"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/main">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:padding="10dp">

                            <androidx.cardview.widget.CardView
                                android:layout_width="150dp"
                                android:layout_height="match_parent"
                                app:cardCornerRadius="20dp"
                                android:layout_margin="10dp"
                                android:elevation="5dp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <ImageButton
                                    android:id="@+id/cafeShop"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:alpha=".50"
                                    android:background="@drawable/use_point1"
                                    android:scaleType="centerCrop" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="bottom"
                                    android:clickable="false"
                                    android:text="@string/use1"
                                    android:fontFamily="sans-serif-black"
                                    android:padding="5dp"/>

                            </androidx.cardview.widget.CardView>


                            <androidx.cardview.widget.CardView
                                android:layout_width="150dp"
                                android:layout_height="match_parent"
                                app:cardCornerRadius="20dp"
                                android:elevation="5dp"
                                android:layout_margin="10dp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <ImageButton
                                    android:id="@+id/cultureShop"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:alpha=".50"
                                    android:background="@drawable/use_point2"
                                    android:scaleType="centerCrop" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="bottom"
                                    android:clickable="false"
                                    android:fontFamily="sans-serif-black"
                                    android:padding="5dp"
                                    android:text="@string/use2" />

                            </androidx.cardview.widget.CardView>

                            <androidx.cardview.widget.CardView
                                android:layout_width="150dp"
                                android:layout_height="match_parent"
                                app:cardCornerRadius="20dp"
                                android:elevation="5dp"
                                android:layout_margin="10dp"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <ImageButton
                                    android:id="@+id/ecoShop"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:alpha=".50"
                                    android:background="@drawable/use_point3"
                                    android:scaleType="centerCrop" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="bottom"
                                    android:clickable="false"
                                    android:text="@string/use3"
                                    android:fontFamily="sans-serif-black"
                                    android:padding="5dp"/>

                            </androidx.cardview.widget.CardView>


                        </LinearLayout>

                    </FrameLayout>

                </HorizontalScrollView>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</FrameLayout>